# pypi-test

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  create_release_and_tag_on_push.yml  create_release_if_new_version.yml  publish-to-pypi.yml  release.yml
Archive/: pyproject.toml
