[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
author = "Stas Yakobov <dev@3os.org>"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]
description = "Mkdocs plugin that allow to inject external markdown or markdown section from given url"
keywords = [
  "mkdocs",
  "plugin",
  "markdown",
  "external-markdown",
  "embed",
  "external",
  "markdown-section",
]
license = "MIT"
name = "mkdocs-embed-external-markdown"
packages = ["external_markdown"]
url = "https://github.com/fire1ce/pypi-test"
version = "v0.0.1"

[options]
Jinja2>=3.1.0
requests>=2.3.0install_requires = 
python_requires = ">=3.9"

[options.entry_points]
external-markdown = external_markdown.plugin:EmbedExternalMarkdown
mkdocs.plugins =
