[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "mkdocs-embed-external-markdown"
version = "0.0.1"
description = "Mkdocs plugin that allow to inject external markdown or markdown section from given url"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Stas Yakobov <dev@3os.org>"
license = "MIT"
url = "https://github.com/fire1ce/pypi-test"
keywords = [
  "mkdocs",
  "plugin",
  "markdown",
  "external-markdown",
  "embed",
  "external",
  "markdown-section",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

[options]
packages = ["external_markdown"]
python_requires = ">=3.9"
install_requires = [
    "Jinja2>=3.1.0",
    "requests>=2.3.0"
]

[options.entry_points."mkdocs.plugins"]
external-markdown = "external_markdown.plugin:EmbedExternalMarkdown"
